<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WineForMe">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha=".3"
        android:scaleType="centerCrop"
        android:src="@drawable/start"
        android:contentDescription="@string/image"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:backgroundTintMode="add"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/cherryview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="16dp">


                <TextView
                    android:id="@+id/text_cherry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cherry"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radio_cherry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_cherry"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBC1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Large" />

                    <RadioButton
                        android:id="@+id/radioBC2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Medium" />

                    <RadioButton
                        android:id="@+id/radioBC3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Small" />
                </RadioGroup>


                <Switch
                    android:id="@+id/switch_cherry"
                    android:layout_width="128dp"
                    android:layout_height="48dp"
                    android:layout_below="@id/radio_cherry"
                    android:text="@string/Sparkling" />

                <CheckBox
                    android:id="@+id/checkbox_cherry"
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/switch_cherry"
                    android:layout_toRightOf="@id/switch_cherry"
                    android:text="@string/Sweetened" />



                <ImageButton
                    android:id="@+id/addtocart_cherry"
                    android:layout_width="161dp"
                    android:layout_height="118dp"
                    android:layout_alignTop="@id/checkbox_cherry"
                    android:layout_alignRight="@id/radio_cherry"
                    android:layout_alignBottom="@id/checkbox_cherry"
                    android:layout_toRightOf="@id/checkbox_cherry"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cherry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_below="@id/addtocart_cherry"
                    android:layout_alignLeft="@id/addtocart_cherry"
                    android:layout_alignRight="@id/addtocart_cherry"
                    android:text="@string/AddToCart"
                     />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/passionview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="16dp">


                <TextView
                    android:id="@+id/text_passion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Passion"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radio_passion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_passion"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBP1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Large" />

                    <RadioButton
                        android:id="@+id/radioBP2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Medium" />

                    <RadioButton
                        android:id="@+id/radioBP3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Small" />
                </RadioGroup>


                <Switch
                    android:id="@+id/switch_passion"
                    android:layout_width="128dp"
                    android:layout_height="48dp"
                    android:layout_below="@id/radio_passion"
                    android:text="@string/Sparkling" />

                <CheckBox
                    android:id="@+id/checkbox_passion"
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/switch_passion"
                    android:layout_toRightOf="@id/switch_passion"
                    android:text="@string/Sweetened" />



                <ImageButton
                    android:id="@+id/addtocart_passion"
                    android:layout_width="161dp"
                    android:layout_height="118dp"
                    android:layout_alignTop="@id/checkbox_passion"
                    android:layout_alignRight="@id/radio_passion"
                    android:layout_alignBottom="@id/checkbox_passion"
                    android:layout_toRightOf="@id/checkbox_passion"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/passion"
                    android:onClick="passionButtonClicked"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_below="@id/addtocart_passion"
                    android:layout_alignLeft="@id/addtocart_passion"
                    android:layout_alignRight="@id/addtocart_passion"
                    android:text="@string/AddToCart"
                    />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>